[gd_scene load_steps=16 format=3 uid="uid://h287p6l40nl"]

[ext_resource type="Script" path="res://dynamite.gd" id="1_ifaek"]
[ext_resource type="Texture2D" uid="uid://d1lgu6erdeavg" path="res://enemy_spritesheets/Dynamite.png" id="2_ltugn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bkun7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0m8sr"]
atlas = ExtResource("2_ltugn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi1yv"]
atlas = ExtResource("2_ltugn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4unna"]
atlas = ExtResource("2_ltugn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jmu2d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m8sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi1yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4unna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m8sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi1yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4unna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m8sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi1yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4unna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m8sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi1yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4unna")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pwylm"]
atlas = ExtResource("2_ltugn")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10xsk"]
atlas = ExtResource("2_ltugn")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm3ai"]
atlas = ExtResource("2_ltugn")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1358"]
atlas = ExtResource("2_ltugn")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef4yl"]
atlas = ExtResource("2_ltugn")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gao6g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwylm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10xsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm3ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1358")
}],
"loop": false,
"name": &"explosion",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef4yl")
}],
"loop": true,
"name": &"telegraph",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_7i3og"]
Label/colors/font_color = Color(1, 0, 0, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_voype"]
size = Vector2(35.1137, 13.8682)

[node name="dynamite" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.506849, 0.557688)
collision_layer = 0
script = ExtResource("1_ifaek")

[node name="explosion" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 512

[node name="CollisionShape2D2" type="CollisionShape2D" parent="explosion"]
scale = Vector2(8.18165, 8.18165)
shape = SubResource("CircleShape2D_bkun7")

[node name="dynamite_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jmu2d")
frame = 11
frame_progress = 1.0

[node name="explosion_sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.223529, 0.176471, 0.572549)
scale = Vector2(2.97971, 2.97971)
sprite_frames = SubResource("SpriteFrames_gao6g")
animation = &"explosion"

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -6.38432
offset_top = -34.8139
offset_right = 33.6157
offset_bottom = -11.8139
theme = SubResource("Theme_7i3og")
text = "3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.72418, -3.0659)
shape = SubResource("RectangleShape2D_voype")

[connection signal="body_entered" from="explosion" to="." method="_on_explosion_body_entered"]
[connection signal="body_exited" from="explosion" to="." method="_on_explosion_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
